Mobile home page image spacing fixed

--- a/src/home/home.css
+++ b/src/home/home.css
@@ -84,6 +84,7 @@
 }
 
 /* Mobile Home */
+
 .homemobiles {
   width: 100vw;
   height: 240px;
@@ -94,6 +95,11 @@
   text-align: center;
   font-family: FuturaBT;
   margin-left: 20px;
+}
+
+.homemobilecontentimage {
+  width: 45vw;
+  height: auto;
 }
 
 .homemobiles .homemobilescontent {
@@ -130,7 +136,6 @@
 }
 
 /* Desktop Press */
-
 .presssection {
   align-items: center;
   justify-content: center;
